--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "browser-sync-webpack-plugin": "^2",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
+    "copy-webpack-plugin": "^4.5.3",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.4",
     "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
     "execa": "^0.10.0",
+    "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
     "globby": "^8.0.1",
     "happypack": "^5",
@@ -59,7 +61,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+    "wxml-loader": "^0.3.0"
   },
   "dependencies": {
     "@aotoo/aotoo": "^5.0.0",
