--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "del": "^3.0.0",
     "ejs-loader": "^0.3.1",
     "execa": "^0.10.0",
+    "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
     "globby": "^8.0.1",
-    "happypack": "^5",
+    "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.0.0",
@@ -62,7 +63,7 @@
     "webpack": "^4",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3",
-    "wxml-loader": "^0.3.0"
+    "write-assets-webpack-plugin": "^1.0.4"
   },
   "dependencies": {
     "@aotoo/aotoo": "^5.0.0",
