--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
 node_modules
-/public/node_modules
-/bower_components
-/public/bower_components/*
-/dist
-/public/dist/*
-npm-debug.log
-/dist_mir
-/public/dist_mir
-/public/dist_mir/*
+bower_components
+dist
+*.log
 .DS_Store
-/fdocs
 *.db
-baidu_verify_B7KJMQXfQu.html
 .vscode
-/shadowserver
-/uploads
-/configs/env_agzgz.js
+aotooExtends
+!/src/aotooSample
+/src
