--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "autoprefixer": "^8.5.0",
     "babel-core": "^6.5.2",
     "babel-loader": "^7",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.8.0",
@@ -43,7 +43,7 @@
     "ejs-loader": "^0.3.1",
     "execa": "^0.10.0",
     "extract-loader": "^3.0.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "fs-extra": "^7.0.0",
     "globby": "^8.0.1",
     "happypack": "^5.0.0",
@@ -58,6 +58,7 @@
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^4.2.0",
+    "regenerator-runtime": "^0.13.2",
     "shelljs": "^0.8.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
