--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "html-webpack-plugin": "^4.2.0",
     "inquirer": "^7.0.0",
     "json-loader": "^0.5.7",
+    "less-loader": "^7.2.1",
     "markdown-loader": "^6.0.0",
     "mini-css-extract-plugin": "^1.3.3",
     "minimist": "^1.2.0",
